--- a/project7/index.html
+++ b/project7/index.html
@@ -11,7 +11,7 @@
         <div class="day">Tues Day</div>
         <div class="day">Wednes Day</div>
         <div class="day">Thrus Day</div>
-        <input type="file" holder="camera">
+        <input type="file" holder="cameraZ">
     </div>
 </body>
 <script>
@@ -20,3 +20,15 @@
    
 </script>
 </html>
+
+// mainly tag are 
+/*
+* <html></html>
+
+*/
+
+
+//float right
+
+// span side by side
+// div flex box
