--- a/project13/index.html
+++ b/project13/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="spin">
-    <span>1</span>
+    <span style="--i :1" >1</span>
     <span>2</span>
     <span>3</span>
     <span>4</span>
