--- a/project9/index.html
+++ b/project9/index.html
@@ -9,13 +9,14 @@
 </head>
 <body >
     <div class="div">
-    <span class="button" id="gray">Gray</span>
+    <span class="button"id="gray">Gray</span>
     <div class="div2">
     <span class="button" id="white">White</span>
-    <span class="button" id="blue">Blue</span>
-    </div>
-    
     <span class="button" id="yellow">Yellow</span>
     </div>
+    
+    <span class="button" id="blue">Yellow</span>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
