--- a/project22/frontend/index.html
+++ b/project22/frontend/index.html
@@ -1,89 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JWT Authentication with Sign Up & Login</title>
+  <title>JWT Auth App</title>
 </head>
 <body>
-  <h2>🔐 User Registration</h2>
-  <input type="text" id="regName" placeholder="Enter Name"><br><br>
-  <input type="password" id="regPassword" placeholder="Enter Password"><br><br>
-  <button id="registerBtn">Sign Up</button>
-
+  <nav>
+    <a href="#/register">Register</a> |
+    <a href="#/login">Login</a> |
+    <a href="#/dashboard">Dashboard</a> |
+    <a href="#/logout">Logout</a>
+  </nav>
   <hr>
 
-  <h2>🔑 User Login</h2>
-  <input type="text" id="username" placeholder="Enter Name"><br><br>
-  <input type="password" id="password" placeholder="Enter Password"><br><br>
-  <button id="loginBtn">Sign In</button>
+  <div id="app"><h2>Welcome! Please Register or Login</h2></div>
 
-  <hr>
-
-  <button id="logoutBtn">Logout</button>
-
-  <script>
-    const API_BASE = "http://localhost:3000"; // ✅ Your backend URL
-    let token = localStorage.getItem("jwt") || "";
-
-    // ✅ Sign Up (Register)
-    document.getElementById("registerBtn").addEventListener("click", async () => {
-      const name = document.getElementById("regName").value.trim();
-      const password = document.getElementById("regPassword").value.trim();
-
-      if (!name || !password) return alert("⚠️ Enter name and password");
-
-      try {
-        const res = await fetch(`${API_BASE}/register`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ name, password })
-        });
-
-        const data = await res.json();
-        if (res.ok) {
-          alert("✅ Registration successful! Now log in.");
-        } else {
-          alert("❌ " + data.message);
-        }
-      } catch (err) {
-        alert("❌ Cannot connect to server");
-      }
-    });
-
-    // ✅ Login
-    document.getElementById("loginBtn").addEventListener("click", async () => {
-      const name = document.getElementById("username").value.trim();
-      const password = document.getElementById("password").value.trim();
-
-      if (!name || !password)
-
-      return alert("⚠️ Enter credentials");
-
-      try {
-        const res = await fetch(`${API_BASE}/login`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ name, password })
-        });
-
-        const data = await res.json();
-        if (res.ok) {
-          token = data.token;
-          localStorage.setItem("jwt", token);
-          alert("✅ Login successful! Token saved.");
-        } else {
-          alert("❌ " + data.message);
-        }
-      } catch (err) {
-        alert("❌ Cannot connect to server");
-      }
-    });
-
-    // ✅ Logout
-    document.getElementById("logoutBtn").addEventListener("click", () => {
-      localStorage.removeItem("jwt");
-      token = "";
-      alert("✅ Logged out successfully");
-    });
-  </script>
+  <script src="./app.js"></script>
 </body>
 </html>
